--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,5 @@ dependencies = [
     "pyaudio>=0.2.11",
     "pyautogui>=0.9.54",
     "pyperclip>=1.8.2",
-    "openai>=1.0.0"
+    "openai>=1.0.0",
 ]
