--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
+# Configuration files with API keys
 config.ini
+
+# Python
 __pycache__/
 *.pyc
 *.pyo
@@ -18,5 +21,61 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *.log
+.env
+
+# Audio files and recordings
+*.wav
+*.mp3
+*.m4a
+*.aac
+*.flac
+*.ogg
+VoiceRecordings/
+recordings/
+audio_temp/
+
+# Text files from transcriptions (optional - you might want to keep these)
+# *.txt
+
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+
+# Windows
+desktop.ini
+
+# Temporary files
+*.tmp
+*.temp
+temp/
+tmp/
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
